--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -106,11 +106,11 @@ This study explains how data wrangling is performed to clean, manipulate and mak
 
 <p align="justify">Having completed the model preparation and training, the open-source Sklearn [17] package was leveraged to calculate prediction metrics like precision, recall, and f-score for each class, on the test dataset and plot confusion matrix for visualization. The confusion matrix plots and accuracy metrics after testing the models on the various test and validation datasets are presented below.</p>
 
-![](images/Figure 1.png){.center}
+![](images/P8.png){.center}
 [[*Fig. 8. Confusion matrix for case 1 test dataset, with 3 hidden layers of 32, 64, and 128 neurons respectively*]{.center}]{.semibold}
 <p align="justify">__Outcome from Fig. 8:__ 65% accuracy was obtained on the training data, with a loss of about 0.6. The accuracy on the training dataset was suboptimal and hence, no testing was performed on this dataset.</p>
 
-![](images/Figure 2.png){.center}
+![](images/P9.png){.center}
 [[*Fig. 9. Confusion matrix for case 2 test dataset, with 7 hidden layers with 32, 64, 128, 256, 128, 64 and 32 neurons respectively*]{.center}]{.semibold}
 <p align="justify">__Outcome from Fig. 9:__ 87% accuracy was obtained on the training data</p>
 
@@ -120,7 +120,7 @@ This study explains how data wrangling is performed to clean, manipulate and mak
 |Recall|0.22, 0.72, 0.19, for short term, medium term and long term respectively|
 |Proportion of each class in original dataset|25%, 65% and 0.1% for short term, medium term and long term respectively|
 
-![](images/Figure 3.png){.center}
+![](images/P10.png){.center}
 [[*Fig 10. Confusion matrix for case 2 test dataset, with 7 hidden layers with 32, 64, 128, 256, 128, 64 and 32 neurons respectively*]{.center}]{.semibold}
 <p align="justify">__Outcome from Fig. 10:__ 68% accuracy was obtained on the training data, with a loss of about 0.7</p>
 
@@ -128,7 +128,7 @@ This study explains how data wrangling is performed to clean, manipulate and mak
 |:----------------------|:-------------------------------------|
 |Precision|0.34, 0.66, and 0.36 for short term, medium term and long term respectively|
 
-[![](images/Figure 4.png){.center}
+[![](images/P11.png){.center}
 [*Fig 11. Confusion matrix for case 2 validation dataset, with 7 hidden layers with 32, 64, 128, 256, 128, 64 and 32 neurons respectively*]{.center}]{.semibold} 
 <p align="justify">__Outcome from Fig. 11:__ 68% accuracy was obtained on the training data, with a loss of about 0.7</p>
 
@@ -138,11 +138,11 @@ This study explains how data wrangling is performed to clean, manipulate and mak
 |Recall|0.08, 0.96, 0.11, for short term, medium term and long term respectively|
 |Proportion of each class in original dataset|25%, 65% and 0.1% for short term, medium term and long term respectively|
 
-![](images/Figure 5.png){.center}
+![](images/P12.png){.center}
 [[*Fig 12. Confusion matrix for case 3 test dataset with 3 hidden layers of 32, 64, and 128 neurons respectively*]{.center}]{.semibold}
 <p align="justify">__Outcome from Fig. 12:__ 65% accuracy was obtained on the training data, with a loss of about 0.9.The accuracy on the training dataset was suboptimal and hence, no testing was performed on this dataset</p>
 
-![](images/Figure 6.png){.center}
+![](images/P13.png){.center}
 [[*Fig 13. Confusion matrix for case 3 test dataset  with 7 hidden layers of 32, 64, 128, 256, 128, 64 and 32 neurons respectively*]{.center}]{.semibold}
 <p align="justify">__Outcome from Fig. 13:__ 78% accuracy was obtained on the training data, with a loss of about 0.5</p>
 
